force-app/main/default/objects/Writer__c/Writer__c.object-meta.xml
<CustomObject>
    <label>Writer</label>
    <nameField>
        <displayFormat>WRT-{0000}</displayFormat>
        <label>WriterId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Writers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>