force-app/main/default/objects/Writer__c/fields/About_Writer__c.field-meta.xml
<CustomField>
    <fullName>About_Writer__c</fullName>
    <label>About Writer</label>
    <type>TextArea</type>
</CustomField>