force-app/main/default/objects/Writer__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>(((YEAR(Time_Line_To__c) - YEAR(Time_Line_From__c))*12) + (MONTH(Time_Line_To__c) - MONTH(Time_Line_From__c)))/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>