force-app/main/default/objects/Writer__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>