force-app/main/default/objects/Writer__c/fields/Time_Line_From__c.field-meta.xml
<CustomField>
    <fullName>Time_Line_From__c</fullName>
    <label>Time Line From</label>
    <type>Date</type>
</CustomField>