force-app/main/default/objects/Writer__c/fields/Time_Line_To__c.field-meta.xml
<CustomField>
    <fullName>Time_Line_To__c</fullName>
    <label>Time Line To</label>
    <type>Date</type>
</CustomField>